# jmage-sampler

./: CMakeLists.txt  Makefile.in  NEWS  README  configure  header_scroll  jm-sampler.ttl  jmage-sampler.pro  jmage_sampler  manifest.ttl
cmake/Modules/: FindLibJack.cmake  FindLibLv2.cmake  FindLibSampleRate.cmake  FindLibSndFile.cmake
jm-sampler-lv2/: CMakeLists.txt  jm-sampler-lv2.cpp  jm-sampler-lv2.pro  lv2sampler.cpp  lv2sampler.h  plugin.cpp  plugin.h
jm-sampler-lv2exui/: CMakeLists.txt  jm-sampler-lv2exui.c  jm-sampler-lv2exui.cpp  jm-sampler-lv2exui.pro
jm-sampler-lv2ui/: CMakeLists.txt  jm-sampler-lv2ui.cpp
jm-sampler-ui/: CMakeLists.txt  components.cpp  components.h  jm-sampler-ui.cpp  jm-sampler-ui.h  jm-sampler-ui.pro  main.cpp  mappings.h  zonegrid.cpp  zonegrid.h
jmage-sampler/: .jmage-sampler.cpp.swp  CMakeLists.txt  jacksampler.cpp  jacksampler.h  jmage-sampler.cpp
lib/: CMakeLists.txt  collections.h  components.cpp  components.h  config.h.in  gui_components.cpp  gui_components.h  gui_zonegrid.cpp  gui_zonegrid.h  jmsampler.cpp  jmsampler.h  lib.pro  lv2_uris.h  lv2sampler.cpp  lv2sampler.h  sfzparser.cpp  sfzparser.h  wave.cpp  wave.h  zone.h
lib/lv2/: uris.h
python/jmage/: interface.py  ui.py  util.py
qt/: components.cpp  components.h  jm-sampler-ui.cpp  jm-sampler-ui.h  jm-sampler-ui.pro  zonegrid.cpp  zonegrid.h
src/: jm-sampler-lv2.cpp  jm-sampler-lv2ui.c  jmage-sampler.c  sfzparser.cpp  sfzparser.h  test_sampler.c  test_sfz.cpp  uris.h
src/jmage/: collections.h  components.cxx  components.h  control.cxx  control.h  jmsampler.cxx  jmsampler.h  jmzonelist.cxx  jmzonelist.h  sampler.cxx  sampler.h  structures.c  structures.h
